Fixed more pixel level alignment

--- a/style/main.css
+++ b/style/main.css
@@ -225,7 +225,7 @@ header {
         clear: both; } }
   @media only screen and (min-width: 960px) {
     .site-nav {
-      margin: -30.5rem auto 0; } }
+      margin: -31.0rem auto 0; } }
 
 
 .site-nav-coc {
@@ -240,7 +240,7 @@ header {
         clear: both; } }
   @media only screen and (min-width: 960px) {
     .site-nav-coc {
-      margin: -25.5rem auto 0; } }
+      margin: -25.6rem auto 0; } }
 
 .byline {
   line-height: 1.2em;
